employer dashboard additional cards updated interviews

--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -620,34 +620,34 @@
                                             class="list-group list-group-flush"
                                         >
                                             <a href="#" class="list-group-item"
-                                                >First item</a
+                                                >First cadidate</a
                                             >
                                             <a href="#" class="list-group-item"
-                                                >Second item</a
+                                                >Second candidate</a
                                             >
                                             <a href="#" class="list-group-item"
-                                                >Third item</a
+                                                >Third candidate</a
                                             >
                                             <a href="#" class="list-group-item"
-                                                >Fourth item</a
+                                                >Fourth candidate</a
                                             >
                                             <a href="#" class="list-group-item"
-                                                >Fifth item</a
+                                                >Fifth candidate</a
                                             >
                                             <a href="#" class="list-group-item"
-                                                >Sixth item</a
+                                                >Sixth candidate</a
                                             >
                                             <a href="#" class="list-group-item"
-                                                >Seventh item</a
+                                                >Seventh candidate</a
                                             >
                                             <a href="#" class="list-group-item"
-                                                >Eighth item</a
+                                                >Eighth candidate</a
                                             >
                                             <a href="#" class="list-group-item"
-                                                >Nineth item</a
+                                                >Nineth candidate</a
                                             >
                                             <a href="#" class="list-group-item"
-                                                >Texth item</a
+                                                >Tenth candidate</a
                                             >
                                         </div>
                                     </div>
@@ -673,7 +673,7 @@
 
                         <div class="col-lg-6 col-sm-6 col-md-6">
                             <div class="mb-4 mt-5">
-                                <h4>Additional Cards</h4>
+                                <h4>Employer Convience Cards</h4>
                             </div>
 
                             <div class="job-card">
@@ -705,7 +705,7 @@
                                                 class="col-lg-12 col-sm-12 col-md-12"
                                                 style="font-size: 25px"
                                             >
-                                                Smart AI Tools
+                                                Booster Candidates
                                             </div>
                                             <div
                                                 class="col-lg-12 col-sm-12 col-md-12 mt-2"
@@ -713,23 +713,23 @@
                                             >
                                                 <ul>
                                                     <li>
-                                                        Feature-1 Description
+                                                        <a href="">Candidate-1 Profile</a>
                                                     </li>
                                                     <li>
-                                                        Feature-2 Description
+                                                        <a href="">Candidate-2 Profile</a>
                                                     </li>
                                                     <li>
-                                                        Feature-3 Description
+                                                        <a href="">Candidate-3 Profile</a>
                                                     </li>
                                                 </ul>
                                             </div>
 
                                             <div>
                                                 <button
-                                                    class="btn btn-outline-primary"
+                                                    class="btn btn-outline-primary w-25 p-1"
                                                     style="font-size: larger"
                                                 >
-                                                    Know More
+                                                    More
                                                 </button>
                                             </div>
                                         </div>
@@ -755,6 +755,58 @@
                                 <li> 2 Hour Ago</li>
                             </ul> -->
                                     <!-- <span> 105 San Antonio, TX</span> -->
+
+                                    <div
+                                        class="container"
+                                        style="font-weight: 500"
+                                    >
+                                        <div class="row">
+                                            <div
+                                                class="col-lg-12 col-sm-12 col-md-12"
+                                                style="font-size: 25px"
+                                            >
+                                                Shortlisted Candidates
+                                            </div>
+                                            <div
+                                                class="col-lg-12 col-sm-12 col-md-12 mt-2"
+                                                style="font-size: 20px"
+                                            >
+                                            <ul>
+                                                <li>
+                                                    <a href="">Candidate-1 Profile</a>
+                                                </li>
+                                                <li>
+                                                    <a href="">Candidate-2 Profile</a>
+                                                </li>
+                                                <li>
+                                                    <a href="">Candidate-3 Profile</a>
+                                                </li>
+                                            </ul>
+                                            </div>
+
+                                            <div>
+                                                <button
+                                                    class="btn btn-outline-primary w-25 p-1"
+                                                    style="font-size: larger"
+                                                >
+                                                    More
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="job-card">
+                                <div class="content">
+                                    <div class="job-image">
+                                        <a routerLink="/jobs/details">
+                                            <img
+                                                src="assets/images/job/job2.jpg"
+                                                alt="job-image"
+                                            />
+                                        </a>
+                                    </div>
 
                                     <div
                                         class="container"
@@ -771,77 +823,25 @@
                                                 class="col-lg-12 col-sm-12 col-md-12 mt-2"
                                                 style="font-size: 20px"
                                             >
-                                                <ul>
-                                                    <li>
-                                                        Feature-1 Description
-                                                    </li>
-                                                    <li>
-                                                        Feature-2 Description
-                                                    </li>
-                                                    <li>
-                                                        Feature-3 Description
-                                                    </li>
-                                                </ul>
+                                            <ul>
+                                                <li>
+                                                    <a href="">Candidate-1 Profile</a>
+                                                </li>
+                                                <li>
+                                                    <a href="">Candidate-2 Profile</a>
+                                                </li>
+                                                <li>
+                                                    <a href="">Candidate-3 Profile</a>
+                                                </li>
+                                            </ul>
                                             </div>
 
                                             <div>
                                                 <button
-                                                    class="btn btn-outline-primary"
+                                                    class="btn btn-outline-primary w-25 p-1"
                                                     style="font-size: larger"
                                                 >
-                                                    Know More
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="job-card">
-                                <div class="content">
-                                    <div class="job-image">
-                                        <a routerLink="/jobs/details">
-                                            <img
-                                                src="assets/images/job/job2.jpg"
-                                                alt="job-image"
-                                            />
-                                        </a>
-                                    </div>
-
-                                    <div
-                                        class="container"
-                                        style="font-weight: 500"
-                                    >
-                                        <div class="row">
-                                            <div
-                                                class="col-lg-12 col-sm-12 col-md-12"
-                                                style="font-size: 25px"
-                                            >
-                                                Buisness Intelligence
-                                            </div>
-                                            <div
-                                                class="col-lg-12 col-sm-12 col-md-12 mt-2"
-                                                style="font-size: 20px"
-                                            >
-                                                <ul>
-                                                    <li>
-                                                        Feature-1 Description
-                                                    </li>
-                                                    <li>
-                                                        Feature-2 Description
-                                                    </li>
-                                                    <li>
-                                                        Feature-3 Description
-                                                    </li>
-                                                </ul>
-                                            </div>
-
-                                            <div>
-                                                <button
-                                                    class="btn btn-outline-primary"
-                                                    style="font-size: larger"
-                                                >
-                                                    Know More
+                                                    More
                                                 </button>
                                             </div>
                                         </div>
