fixed minor bug in job-details

--- a/src/app/components/pages/job-details-page/job-details-page.component.html
+++ b/src/app/components/pages/job-details-page/job-details-page.component.html
@@ -102,7 +102,7 @@
                                 <span>Work Level</span> {{ jobToArray[0][1].career_level }}
                             </li>
                             <li>
-                                <span>Employment Type</span> Part Time
+                                <span>Employment Type</span> {{ jobToArray[0][1].job_type }}
                             </li>
                             
                             <li>
