added name and img in candidate dashboard

--- a/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
+++ b/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
@@ -22,7 +22,7 @@
             <div class="col-lg-3 col-md-12">
                 <div class="candidate-details-sidebar">
                     <div class="profile">
-                        <img src="assets/images/candidates/candidate7.jpg" class="main-image" alt="candidates-image">
+                        <img src="assets\images\users\default.png" class="main-image" alt="candidates-image">
                         <div class="title">
                             <h3>{{objToArray[0][1].name}}</h3>
                             <!-- <img src="assets/images/flags/switzerland.svg" alt="flag"> -->
@@ -98,7 +98,7 @@
             </div>
             <div class="col-lg-9 col-md-12">
                 <div class="candidate-details-desc">
-                    <h3>About Henry</h3>
+                    <h3>About {{objToArray[0][1].name}}</h3>
                     <div class="bar"></div>
                     <p>A talented professional with an academic <strong>background</strong> in IT and proven commercial development experience as C++ developer since 1999. Has a sound knowledge of the software development life cycle. Was involved in more than 140 software development outsourcing projects.</p>
                     <p>Programming Languages: C/C++, .NET C++, Python, Bash, Shell, PERL, Regular expressions, Python, Active-script.</p>
