--- a/src/app/components/pages/post-a-job-preview-page/post-a-job-preview-page.component.html
+++ b/src/app/components/pages/post-a-job-preview-page/post-a-job-preview-page.component.html
@@ -194,7 +194,7 @@
                         </ul>
                     </div> -->
                 </div>
-                <div class="mt-3 mx-2">
+                <div class="mt-3" style="margin-left: 310px">
                     
                     <!-- <a  style="text-align: center;"routerLink="/post-a-job" class="default-btn p-2">Go Back To Edit</a> -->
                     <a  style="text-align: center;" (click)="createJob()" class="default-btn mx-2 p-2">Post Job</a>
