job-applications-implemented only job card is showing

--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -49,7 +49,7 @@
                         <div class="card-body" style="padding: 0px;">
                             <div class="row">
                                 <div class="col-3">
-                                    <h2 style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'">07</h2>
+                                    <h2 style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'">{{finalArraySize}}</h2>
                                     <p>Applied</p>
                                 </div>
                                 <div class="col-3 border-success border-right">
@@ -136,8 +136,8 @@
                         <li  class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-briefcase-line"></i> {{ad.career_level}}</li>
                         <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-profile-line"></i> {{ad.job_type}} </li>
                         <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-award-line"></i> {{ad.experience}} Years</li>
-                        <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-time-line"></i> {{dummyArray[1].apply_date_time}}</li>
-                        <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-time-line"></i> {{dummyArray[1].job_id}}</li>
+                        <!-- <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-time-line"></i> {{dummyArray[1].apply_date_time}}</li> -->
+                        <!-- <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-time-line"></i> {{dummyArray[1].job_id}}</li> -->
                         <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-wallet-line"></i> {{ad.salary_minimum}} - {{ad.salary_maximum}} / {{ad.salary_type}} </li>
                         <!-- <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-wallet-line"></i> {{ad.salary_minimum}} - {{ad.salary_maximum}} / {{ad.salary_type}} </li> -->
         
