pricing and services

--- a/src/app/components/common/pricing/pricing.component.html
+++ b/src/app/components/common/pricing/pricing.component.html
@@ -7,8 +7,8 @@
                         <thead>
                             <tr>
                                 <th scope="col"></th>
-                                <th scope="col">$250 <span>/mon</span></th>
-                                <th scope="col">$500 <span>/mon</span></th>
+                                <th scope="col">₹ 250 <span>/mon</span></th>
+                                <th scope="col">₹ 500 <span>/mon</span></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -18,13 +18,13 @@
                                 <td>Premium Plan</td>
                             </tr>
                             <tr>
-                                <td>Job Posts Includes</td>
-                                <td>Post 10 Jobs</td>
-                                <td>Post 22 Jobs</td>
+                                <td>Access To CV</td>
+                                <td>Get 10 CV</td>
+                                <td>Get 22 CV</td>
                             </tr>
                             <tr>
-                                <td>Featured Job</td>
-                                <td>20</td>
+                                <td>Email and phone Support to employers</td>
+                                <td>10 per day</td>
                                 <td>Unlimited</td>
                             </tr>
                             <tr>
@@ -33,11 +33,11 @@
                                 <td>For 50 Days</td>
                             </tr>
                             <tr>
-                                <td>See Job Posting Stats</td>
+                                <td>HR support to candidates</td>
                                 <td><i class="ri-check-fill"></i></td>
                                 <td><i class="ri-check-fill"></i></td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
                                 <td>Highlighted Posts</td>
                                 <td>5 Post</td>
                                 <td>Unlimited</td>
@@ -51,7 +51,7 @@
                                 <td>Email Support</td>
                                 <td>20 Days</td>
                                 <td><i class="ri-check-fill"></i></td>
-                            </tr>
+                            </tr> -->
                             <tr>
                                 <td></td>
                                 <td>
@@ -70,12 +70,12 @@
                     <div class="section-title">
                         <h2>Choose Your Best <span>Pricing Plan</span></h2>
                         <div class="bar"></div>
-                        <p>Lorem ipsum dolor sit amet, et alii clita tritani per. Vix ut vidisse pertinacia, ius ut maiorum omittam. Duis ludus no mea, te has delenit maiorum, an ius admodum constituto. Nostrud urbanitas.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet, et alii clita tritani per. Vix ut vidisse pertinacia, ius ut maiorum omittam. Duis ludus no mea, te has delenit maiorum, an ius admodum constituto. Nostrud urbanitas.</p> -->
                     </div>
                     
                     <ul>
                         <li><img src="assets/images/users/user1.jpg" alt="user"></li>
-                        <li><img src="assets/images/users/user2.jpg" alt="user"></li>
+                        <!-- <li><img src="assets/images/users/user2.jpg" alt="user"></li> -->
                         <li><img src="assets/images/users/user3.jpg" alt="user"></li>
                         <li><img src="assets/images/users/user4.jpg" alt="user"></li>
                         <li><img src="assets/images/users/user5.jpg" alt="user"></li>
