--- a/src/app/components/pages/search-resule-page/search-resule-page.component.html
+++ b/src/app/components/pages/search-resule-page/search-resule-page.component.html
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                 </form> -->
-                <p style="font-size: larger;">{{arraySize}} job searches found</p>
+                <p style="font-size: x-large;">{{arraySize}} job searches found</p>
             </div>
             <!-- <div class="popular-search">
                 <span class="title">Popular Search: </span>
