fixed edit button form

--- a/src/app/components/common/pricing/pricing.component.html
+++ b/src/app/components/common/pricing/pricing.component.html
@@ -7,35 +7,35 @@
                         <thead>
                             <tr>
                                 <th scope="col"></th>
-                                <th scope="col">₹ 250 <span>/mon</span></th>
-                                <th scope="col">₹ 500 <span>/mon</span></th>
+                                <th scope="col"> <del style="color: #696969;">₹250</del> <span style="font-size: larger; color: #24D1A7;"> ₹0</span> <span>/mon</span></th>
+                                <!-- <th scope="col">₹ 500 <span>/mon</span></th> -->
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>What You Get</td>
                                 <td>Extended Plan</td>
-                                <td>Premium Plan</td>
+                                <!-- <td>Premium Plan</td> -->
                             </tr>
                             <tr>
                                 <td>Access To CV</td>
-                                <td>Get 10 CV</td>
-                                <td>Get 22 CV</td>
+                                <td>Unlimited</td>
+                                <!-- <td>Get 22 CV</td> -->
                             </tr>
                             <tr>
                                 <td>Email and phone Support to employers</td>
                                 <td>10 per day</td>
-                                <td>Unlimited</td>
+                                <!-- <td>Unlimited</td> -->
                             </tr>
                             <tr>
                                 <td>Displayed Days</td>
-                                <td>For 10 Days</td>
-                                <td>For 50 Days</td>
+                                <td>For 30 Days</td>
+                                <!-- <td>For 50 Days</td> -->
                             </tr>
                             <tr>
                                 <td>HR support to candidates</td>
                                 <td><i class="ri-check-fill"></i></td>
-                                <td><i class="ri-check-fill"></i></td>
+                                <!-- <td><i class="ri-check-fill"></i></td> -->
                             </tr>
                             <!-- <tr>
                                 <td>Highlighted Posts</td>
@@ -57,9 +57,9 @@
                                 <td>
                                     <a routerLink="/pricing" class="price-btn">Purchase <i class="ri-shopping-cart-2-line"></i></a>
                                 </td>
-                                <td>
+                                <!-- <td>
                                     <a routerLink="/pricing" class="price-btn">Purchase <i class="ri-shopping-cart-2-line"></i></a>
-                                </td>
+                                </td> -->
                             </tr>
                         </tbody>
                     </table>
