--- a/src/app/components/pages/company-jobs-posted/company-jobs-posted-page.component.html
+++ b/src/app/components/pages/company-jobs-posted/company-jobs-posted-page.component.html
@@ -90,8 +90,17 @@
                                     <li><i class="ri-hashtag"></i> {{job[1].job_tags}} </li>
                                     <!-- <li><i class="ri-map-pin-line"></i> {{job[1].office_address}}, {{job[1].location}}</li> -->
                                     <hr style="display:flex;">
-                                    <li style="text-align:right;"><i class="ri-wallet-line"></i> {{job[1].salary_minimum}} - {{job[1].salary_maximum}} / {{job[1].salary_type}} </li>
-                                </ul>          
+                                    <li style="text-align:right;margin-right: 400px"><i class="ri-wallet-line"></i> {{job[1].salary_minimum}} - {{job[1].salary_maximum}} / {{job[1].salary_type}} </li>
+                                    <a
+                                        (click)="idPass(job[1].id)"
+                                        routerLink="/jobs/edit"
+                                    >
+                                        <li>
+                                            <i class="ri-pencil-line"></i>Edit
+                                        </li></a
+                                    >
+                                </ul>
+
 
                                 <!-- <div class="price" style="text-align: right;"> <i class="ri-wallet-line"></i> {{job[1].salary_minimum}} - {{job[1].salary_maximum}} / {{job[1].salary_type}}</div> -->
                             </div>
