--- a/src/app/components/pages/post-a-job-edit-page/post-a-job-edit-page.component.html
+++ b/src/app/components/pages/post-a-job-edit-page/post-a-job-edit-page.component.html
@@ -199,7 +199,7 @@
                         </div>
                     </div> -->
                     <div class="col-lg-12 col-md-12">
-                        <button type="button" (click)="createJob()" class="default-btn">Submit & Preview</button>
+                        <button type="button" (click)="previewJob()" routerLink="/post-a-job/preview" class="default-btn">Preview</button>
                     </div>
                 </div>
             </form>
