added Christmas Banner

--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -1,10 +1,10 @@
-<div class="banner-area">
+<div class="banner-area" style="background-image: url('/assets/images/festives/christmas.png'); background-position: center; background-size: cover; background-color: aliceblue; background-blend-mode: multiply;">
     <div class="container">
         <div class="banner-content">
             <div class="heading">
             <div style="margin-bottom:10px">
-                <h1  style="margin-right: 12px; margin-bottom: 0px; padding-bottom: 0px;">Save TIME &</h1>
-                <h1  style="margin-top: -42px; padding-top: 15px; margin-bottom: 2px;">Save MONEY </h1>
+                <h1  style="margin-right: 12px; margin-bottom: 0px; padding-bottom: 0px; color: rgb(20, 73, 20);">Save TIME &</h1>
+                <h1  style="margin-top: 0; padding-top: 15px; margin-bottom: 2px; color: rgb(20, 73, 20);">Save MONEY </h1>
             </div>
         </div>
             <div class="banner-form">
