candidate-preview-page edit page form changes

--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -176,12 +176,49 @@
                          </div>
                      </div>
 
-                     <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-6 col-md-6">
                          <div class="form-group">
                              <label>Skills (separate with commas) <span>*</span></label>
                              <input type="text" style="text-transform: capitalize;" class="form-control" required>
                          </div>
-                     </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                         <div class="form-group">
+                             <label>Facebook profile <span></span></label>
+                             <input type="text" id="fbProfile" style="text-transform: capitalize;" class="form-control">
+                         </div>
+                    </div>
+                    
+                    <div class="col-lg-6 col-md-6">
+                         <div class="form-group">
+                             <label> Twitter profile<span></span></label>
+                             <input type="text" id="tweetProfile" style="text-transform: capitalize;" class="form-control">
+                         </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                         <div class="form-group">
+                             <label>Instagram profile <span></span></label>
+                             <input type="text" id="instaProfile" style="text-transform: capitalize;" class="form-control">
+                         </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                         <div class="form-group">
+                             <label> Linkedin profile<span></span></label>
+                             <input type="text" id="linkedinProfile" style="text-transform: capitalize;" class="form-control">
+                         </div>
+                    </div>
+
+                    <div class="col-lg-12 col-md-6">
+                         <div class="form-group">
+                             <label> Behance profile<span></span></label>
+                             <input type="text" id="behanceProfile" style="text-transform: capitalize;" class="form-control">
+                         </div>
+                    </div>
+
+
                     <!-- <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Career Level <span>*</span></label>
