commented candidate role-hardcoded

--- a/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
+++ b/src/app/components/pages/candidate-details-page/candidate-details-page.component.html
@@ -27,7 +27,7 @@
                             <h3>{{objToArray[0][1].name}}</h3>
                             <!-- <img src="assets/images/flags/switzerland.svg" alt="flag"> -->
                         </div>
-                        <p>Web Developer</p>
+                        <!-- <p>Web Developer</p> -->
                         <!-- <div class="rating">
                             <i class="ri-star-fill"></i>
                             <i class="ri-star-fill"></i>
